# python-ml-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  payload.json  pyproject.toml  requirements.txt
models/: logreg_pipeline.joblib
reports/: metrics.csv
scripts/: evaluate_model.py  make_dataset.py  train_model.py
src/ml_api/: main.py  model.py  predict.py  schemas.py
