[project]
name = "python-ml-api"
version = "1.0.0"
description = "FastAPI ML model API with included dataset and evaluation outputs."
requires-python = ">=3.10"
dependencies = ["fastapi", "uvicorn", "pandas", "numpy", "scikit-learn", "joblib", "matplotlib"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

